# Useless-Engine

./: .gitignore  .gitmodules  LICENSE  README.md
Playground/: CMakeLists.txt
Playground/src/: Playground.cpp
Useless-Engine/: CMakeLists.txt
Useless-Engine/include/: Useless.h
Useless-Engine/src/: Useless.h
Useless-Engine/src/Useless/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h  uepch.cpp  uepch.h
Useless-Engine/src/Useless/Events/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Useless-Engine/src/Useless/Platform/MacOS/: MacWindow.cpp  MacWindow.h
